Fixed alignment with profile name

--- a/client/src/Components/Database/Header/Header2.css
+++ b/client/src/Components/Database/Header/Header2.css
@@ -43,6 +43,7 @@
 
 .IoPersonCircleSharp {
     margin-right: 2%;
+    margin-top: 1%;
 }
 
 .FiSettings {
